--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,10 @@
 # file: roles/fubarhouse.python/tasks/main.yml
 
 - include: pyenv.yml
+  when: fubarhouse_python_install_pyenv
 
 - include: python.yml
+  when: fubarhouse_python_install_python
 
 - include: pypi.yml
+  when: fubarhouse_python_install_pypi
