--- a/tasks/pyenv.yml
+++ b/tasks/pyenv.yml
@@ -62,5 +62,5 @@
 - name: "PyEnv | Initializing"
   become: yes
   become_user: "{{ ansible_ssh_user }}"
-  raw: echo 'eval "$({{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.updater_path }}/{{ updater_exec }} init -)"' >> ~/.bashrc
+  raw: echo 'eval "$({{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.updater_path }}/{{ fubarhouse_python.updater_exec }} init -)"' >> ~/.bashrc
   when: not fubarhouse_python_pyenv_installed.stat.exists
