--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,11 @@
 ---
 
 fubarhouse_python:
+  # Shell profiles
+  shell_profiles:
+    - { filename: shell }
+    - { filename: .bashrc }
+    - { filename: .bash_profile }
   # Application versions
   python_version: "3.5.1"
   # Application versions (non-default)
