--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -3,22 +3,22 @@
 
 - name: "Python | Check python versions"
   become: yes
-  become_user: "{{ ansible_ssh_user }}"
-  shell: "{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }} versions | grep '{{ fubarhouse_python.python_version }}'"
+  become_user: "{{ fubarhouse_user }}"
+  shell: "{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }} versions | grep '{{ python_version }}'"
   register: fubarhouse_python_python_installed
   ignore_errors: yes
   no_log: yes
 
 - name: "Python | Install"
   become: yes
-  become_user: "{{ ansible_ssh_user }}"
+  become_user: "{{ fubarhouse_user }}"
   shell: "{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }} install {{ item }}"
-  with_items: "{{ fubarhouse_python.all_python_versions }}"
-  when: "'{{ fubarhouse_python.python_version }}' not in '{{ fubarhouse_python_python_installed.stdout }}'"
+  with_items: "{{ python_versions }}"
+  when: "'{{ python_version }}' not in '{{ fubarhouse_python_python_installed.stdout }}'"
 
 - name: "Python | Check initialization"
   become: yes
-  become_user: "{{ ansible_ssh_user }}"
+  become_user: "{{ fubarhouse_user }}"
   shell: "cat ~/.bashrc | grep '{{ fubarhouse_python.main_dir }}'"
   register: python_is_installed
   ignore_errors: yes
@@ -26,6 +26,6 @@
 
 - name: "Python | Aliasing"
   become: yes
-  become_user: "{{ ansible_ssh_user }}"
-  shell: "{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }} global {{ fubarhouse_python.python_version }}"
-  when: "'{{ fubarhouse_python.python_version }}' not in '{{ fubarhouse_python_python_installed.stdout }}'"
+  become_user: "{{ fubarhouse_user }}"
+  shell: "{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }} global {{ python_version }}"
+  when: "'{{ python_version }}' not in '{{ fubarhouse_python_python_installed.stdout }}'"
