--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,14 @@
 ---
 
+language: python
+
+python:
+  - 2.7
+
+install:
+  - pip install ansible
+
+script:
+  - cd tests
+  - ansible-playbook -i inventory playbook.yml --syntax-check
+  - ansible-playbook -i inventory playbook.yml --sudo -vvvv
