--- a/tasks/dependencies-Debian.yml
+++ b/tasks/dependencies-Debian.yml
@@ -7,4 +7,15 @@
     name: "{{ item }}"
     state: installed
   with_items:
-    - git
+    - make
+    - build-essential
+    - libssl-dev
+    - zlib1g-dev
+    - libbz2-dev
+    - libreadline-dev
+    - libsqlite3-dev
+    - wget
+    - curl
+    - llvm
+    - libncurses5-dev
+    - libncursesw5-dev
