--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -12,7 +12,7 @@
   become_user: "{{ fubarhouse_user }}"
   shell: "{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }} install {{ item }}"
   with_items: "{{ python_versions }}"
-  when: item not in installed_python_versions.stdout
+  when: '"{{ item }}" not in installed_python_versions.stdout'
 
 - name: "Python | Check initialization"
   become: yes
