change the pypi module to install

--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -8,6 +8,6 @@
     python_versions:
       - 2.7
     python_packages:
-      - pyyaml
+      - virtualenv
   roles:
     - { role: ../../fubarhouse.python }
