--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -5,8 +5,7 @@
   vars:
     ansible_ssh_user: root
     python_version: 2.7
-    python_versions:
-      - 2.7
+    python_versions: []
     python_packages:
       - virtualenv
   roles:
