--- a/tasks/pypi.yml
+++ b/tasks/pypi.yml
@@ -4,8 +4,8 @@
 - name: "PyPI | Locate Pip/PyPI"
   become: yes
   become_user: "{{ fubarhouse_user }}"
-  shell: "which pip"
-  register: pypi_exec
+  set_fact:
+    pypi_exec: "{{ fubarhouse_python.user_dir }/.pyenv/shims/pip"
 
 - name: "PyPI | Ensure installed and updated"
   become: yes
@@ -13,5 +13,5 @@
   pip:
     name: "{{ item }}"
     state: latest
-    executable: "{{ pypi_exec.stdout }}"
+    executable: "{{ pypi_exec }}"
   with_items: "{{ python_packages }}"
