--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,5 +23,7 @@
 - include: python.yml
   when: fubarhouse_python.install_python
 
+- include: virtualenv.yml
+
 - include: pypi.yml
   when: fubarhouse_python.install_pypi
